manifests/immich/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  labels:
    app.kubernetes.io/name: immich-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-database
    spec:
      containers:
        - name: immich-postgres
          image: "ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          resources: {}
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pvc-iscsi-immich-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/name: immich-machine-learning
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
    spec:
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: DB_DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_DATABASE_NAME
            - name: DB_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_HOSTNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: immich-secret-env
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_USERNAME
            - name: HF_XET_CACHE
              value: /cache/huggingface-xet
            - name: IMMICH_MACHINE_LEARNING_URL
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: IMMICH_MACHINE_LEARNING_URL
            - name: MPLCONFIGDIR
              value: /cache/matplotlib-config
            - name: REDIS_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: REDIS_HOSTNAME
            - name: TRANSFORMERS_CACHE
              value: /cache
          image: ghcr.io/immich-app/immich-machine-learning:v3.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 3003
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /cache
              name: cache
          resources: {}
      volumes:
        - emptyDir: {}
          name: cache

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/name: immich-server
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: DB_DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_DATABASE_NAME
            - name: DB_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_HOSTNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: immich-secret-env
                  key: DB_PASSWORD
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_USERNAME
            - name: IMMICH_CONFIG_FILE
              value: /config/immich-config.yaml
            - name: IMMICH_MACHINE_LEARNING_URL
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: IMMICH_MACHINE_LEARNING_URL
            - name: REDIS_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: REDIS_HOSTNAME
          image: ghcr.io/immich-app/immich-server:v3.0.0
          securityContext:
            runAsUser: 1000
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 2283
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources: {}
      volumes:
        - name: config
          secret:
            secretName: immich-config
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-immich-library

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  labels:
    app.kubernetes.io/name: immich-valkey
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-valkey
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: DB_DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_DATABASE_NAME
            - name: DB_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_HOSTNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: immich-secret-env
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: DB_USERNAME
            - name: IMMICH_MACHINE_LEARNING_URL
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: IMMICH_MACHINE_LEARNING_URL
            - name: REDIS_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  name: immich-env
                  key: REDIS_HOSTNAME
          image: docker.io/valkey/valkey:9.1-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /data
              name: data
          resources: {}
      volumes:
        - emptyDir: {}
          name: data
