manifests/immich/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich-server
    gateway: private
spec:
  hostnames:
    - photos.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
